# Multiwfn_compile

./: .gitignore  CMakeLists.txt  CMakeLists_macos_arm64.txt  GUI_modify.f90  README.md  disifl_d.lib  libdislin_d.11.5.2.dylib  mouserotate.f90
.github/: Linux64.yml  Linux64_mouse.yml  Multiwfn_ifort.yml  Multiwfn_macos_arm64.yml  Multiwfn_macos_arm64_runtest.yml  Multiwfn_mingw64.yml  test_Multiwfn_win.yml  test_X11.yml  test_dislin_macos.yml  test_dislin_macos_arm64.yml  win_ifort_ifwin.yml
.github/scripts/: activate_env.bat  install_ifort.bat  install_windows.bat
.github/workflows/: CMakeLists.txt  Linux64.yml  Linux64_Centos7.2_mouse.yml  Linux64_Centos8_mouse.yml  Linux64_mouse.yml  Multiwfn.yml  Multiwfn_ifort.yml  Multiwfn_macos_arm64.yml  Multiwfn_macos_arm64_runtest.yml  Multiwfn_mingw64.yml  test_Multiwfn_win.yml  test_X11.yml  test_dislin_macos_arm64.yml
Multiwfn_3.8_dev_src_Linux/: 0123dim.f90  CDFT.f90  CMakeLists.txt  COMPILATION_METHOD.txt  DOS.f90  GUI.f90  Multiwfn.f90  PBC.f90  basin.f90  cp2kmate.f90  define.f90  excittrans.f90  fileIO.f90  function.f90  grid.f90  hyper_polar.f90  mouserotate.f90  otherfunc.f90  otherfunc2.f90  otherfunc3.f90  plot.f90  spectrum.f90  sub.f90  surfana.f90  topology.f90  util.f90  visweak.f90
misc/: settings.ini
misc/examples/: DFT_polar_freq.out  DFT_polar_static.out  H2CO_DMNAO.out  H2O_NAOMO.out  oxirane.fchk  phenanthrene_DMNAO.out  phenanthrene_NAOMO.out
misc/examples/AdNDP/: B11-.out  Li5+.out  phenanthrene.out
misc/examples/CDA/CH3CH3/: CH3_1.out  CH3_2.out  ethane.out
misc/examples/CDA/COBH3_ORCA/: BH3.molden  CO.molden  COBH3.molden
misc/examples/EDA/EDA_simple/: BH3.out  NH3.out  new.out
misc/examples/IRC/: DA_IRC.out
misc/examples/NICS_scan/: benzene_NICS_1D_0to10.out
misc/examples/excit/: 4-nitroaniline.out  D-pi-A_get47.out  N-phenylpyrrole.out
misc/examples/excit/NTO/: uracil.out
misc/examples/orb_densdiff/H2CO/: S0.out
misc/examples/polar/: NH3_polar_dynamic.out  NH3_polar_static.out
misc/examples/polar/CH3NHCHO/: polar.out
misc/examples/scripts/: AIM+boundary.bat
misc/examples/spectra/: 2-methyloxirane_Pre-resonance_Raman.out  2-methyloxirane_Raman.out  Asn_TDDFT.out  NH3BF3_freq.out  S-methyloxirane_VCD.out  acetic_acid_TDDFT.out
misc/examples/spectra/NMR/: Acetaldehyde.out  TMS.out  pyridine_scale.out
misc/examples/spectra/indigo/: ZINDO.out  ZINDO_30.out
test/: test_allocate.f90  test_c_bool_sizeof.f90  test_dislin_gui.f90  test_events.f90
